001 create img idea and show img in home

--- a/public/css/ideas.css
+++ b/public/css/ideas.css
@@ -1,3 +1,6 @@
+.action-btn{
+    cursor: pointer;
+}
 @media only screen and (min-width: 1235px) {
     .emoji-picker__wrapper{
         top: 198px !important;
